--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "start-server": " json-server --watch --port 4000 ./data/db.json"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.8.1",
+    "@supabase/supabase-js": "^2.38.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
